z-index of modal and resize-handle, as reported in http://forkcms.lighthouseapp.com/projects/61890-fork-cms/tickets/37-design-ui-bug-mailmotor#ticket-37-4
git-svn-id: svn://gallium.openminds.be/opt/svn/fork2/trunk@2236 869247f0-a1f3-4d5c-9449-4b73fc252fa6

--- a/default_www/backend/modules/mailmotor/layout/css/mailmotor.css
+++ b/default_www/backend/modules/mailmotor/layout/css/mailmotor.css
@@ -102,7 +102,8 @@ a.mailAnalyticsBacklink {
 
 .ui-resizable-handle {
 	height: 10px;
-	bottom:-8px;
+	bottom: -8px;
+	z-index: 999 !important;
 }
 
 .ui-resizable-handle:hover {
